--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,27 +8,33 @@
     <title>klav-ra</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="wrapper">
+
+        <div class="monitor">
+            <p id="par">Key Code:</p>
+        </div>
+
         <div class="klaviatura">
             <div class="box_1">
-                    <button class="btn1">ESC</button>
-                    <button class="btn2">F2</button>
-                    <button class="btn3">F3</button>
-                    <button class="btn4">F4</button>
-                    <button class="btn5">F5</button>
-                    <button class="btn6">F6</button>
-                    <button class="btn7">F7</button>
-                    <button class="btn8">F8</button>
-                    <button class="btn9">F9</button>
-                    <button class="btn10">F10</button>
-                    <button class="btn11">F11</button>
-                    <button class="btn12">F12</button>
-                    <button>o</button>
-                    <button class="btn13">delete</button>
-                    <button class="btn14">calc</button>
-                    <button class="btn15">INSERT</button>
-                    <button>PRT SC</button>
+                <button class="btn1">ESC</button>
+                <button class="btn92">F1</button>
+                <button class="btn2">F2</button>
+                <button class="btn3">F3</button>
+                <button class="btn4">F4</button>
+                <button class="btn5">F5</button>
+                <button class="btn6">F6</button>
+                <button class="btn7">F7</button>
+                <button class="btn8">F8</button>
+                <button class="btn9">F9</button>
+                <button class="btn10">F10</button>
+                <button class="btn11">F11</button>
+                <button class="btn12">F12</button>
+                <button class="btn13">delete</button>
+                <button class="btn14">calc</button>
+                <button class="btn15">INSERT</button>
+                <button>PRT SC</button>
             </div>
             <div class="box_1">
                 <button class="btn16">`</button>
@@ -43,10 +50,11 @@
                 <button class="btn26">0</button>
                 <button class="btn27">_</button>
                 <button class="btn28">+</button>
-                <button class="btn29">< bac</button>
+                <button class="btn29">< back</button>
                 <button class="btn30">n/l</button>
-                <button class="btn31">*</button>
-                <button class="btn32">-</button>
+                <button class="btn93">/</button>
+                <button class="btn32">*</button>
+                <button class="btn31">-</button>
             </div>
             <div class="box_1">
                 <button class="btn33">tab</button>
@@ -96,12 +104,12 @@
                 <button class="btn73">N</button>
                 <button class="btn74">M</button>
                 <button class="btn75"><</button>
-                <button class="btn76">></button>
-                <button class="btn77">/</button>
-                <button class="btn78">SHIFT</button>
-                <button class="btn79">1</button>
-                <button class="btn80">2</button>
-                <button class="btn81">3</button>
+                        <button class="btn76">></button>
+                        <button class="btn77">/</button>
+                        <button class="btn67">SHIFT</button>
+                        <button class="btn79">1</button>
+                        <button class="btn80">2</button>
+                        <button class="btn81">3</button>
             </div>
             <div class="box_1">
                 <button class="btn82">CTRL</button>
@@ -109,19 +117,21 @@
                 <button>WIN</button>
                 <button class="btn83">ALT</button>
                 <button>_________________________________________</button>
-                <button class="btn84">ALT</button>
+                <button class="btn83">ALT</button>
                 <button class="btn85">CTRL</button>
-                <button class="btn86"><</button>
-                <button class="btn87">></button>
-                <button class="btn88">⋏</button>
-                <button class="btn89">⋎</button>
-                <button class="btn90">0</button>
-                <button class="btn91">.</button>
-                <button class="btn92">ENTER</button>
+                <button class="btn86">
+                    << /button>
+                        <button class="btn87">></button>
+                        <button class="btn88">⋏</button>
+                        <button class="btn89">⋎</button>
+                        <button class="btn90">0</button>
+                        <button class="btn91">.</button>
+                        <button class="btn63">ENTER</button>
             </div>
         </div>
     </div>
 
     <script src="./js.js"></script>
 </body>
+
 </html>
