--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>klav-ra</title>
+    <title>Key Code</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -104,29 +104,28 @@
                 <button class="btn73">N</button>
                 <button class="btn74">M</button>
                 <button class="btn75"><</button>
-                        <button class="btn76">></button>
-                        <button class="btn77">/</button>
-                        <button class="btn67">SHIFT</button>
-                        <button class="btn79">1</button>
-                        <button class="btn80">2</button>
-                        <button class="btn81">3</button>
+                <button class="btn76">></button>
+                <button class="btn77">/</button>
+                <button class="btn78">SHIFT</button>
+                <button class="btn79">1</button>
+                <button class="btn80">2</button>
+                <button class="btn81">3</button>
             </div>
             <div class="box_1">
                 <button class="btn82">CTRL</button>
                 <button>FN</button>
                 <button>WIN</button>
                 <button class="btn83">ALT</button>
-                <button>_________________________________________</button>
-                <button class="btn83">ALT</button>
+                <button class="btn96">_________________________________________</button>
+                <button class="btn84">ALT</button>
                 <button class="btn85">CTRL</button>
-                <button class="btn86">
-                    << /button>
-                        <button class="btn87">></button>
-                        <button class="btn88">⋏</button>
-                        <button class="btn89">⋎</button>
-                        <button class="btn90">0</button>
-                        <button class="btn91">.</button>
-                        <button class="btn63">ENTER</button>
+                <button class="btn86"><</button>
+                <button class="btn87">></button>
+                <button class="btn88">⋏</button>
+                <button class="btn89">⋎</button>
+                <button class="btn90">0</button>
+                <button class="btn91">.</button>
+                <button class="btn95">ENTER</button>
             </div>
         </div>
     </div>
