--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button class="btn13">delete</button>
                 <button class="btn14">calc</button>
                 <button class="btn15">INSERT</button>
-                <button>PRT SC</button>
+                <button id="prt">PRT SC</button>
             </div>
             <div class="box_1">
                 <button class="btn16">`</button>
@@ -50,7 +50,7 @@
                 <button class="btn26">0</button>
                 <button class="btn27">_</button>
                 <button class="btn28">+</button>
-                <button class="btn29">< back</button>
+                <button class="btn29" id="bac">< back</button>
                 <button class="btn30">n/l</button>
                 <button class="btn93">/</button>
                 <button class="btn32">*</button>
@@ -77,7 +77,7 @@
                 <button class="btn50">+</button>
             </div>
             <div class="box_1">
-                <button class="btn51">CAPS LOCK</button>
+                <button class="btn51" id="c_l">CAPS LOCK</button>
                 <button class="btn52">A</button>
                 <button class="btn53">S</button>
                 <button class="btn54">D</button>
